tests/negative/lexer/camelCase.orng
fn main() -> Int {
    let camelCase = 0
    camelCase
}